# llms-generator

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test_llms2.txt  test_llms3.txt  thingstodo.md
.github/workflows/: publish.yml  release.yml
docs/: changelog.md  conf.py  guide.md  index.md  requirements.txt
llms_generator/: __init__.py  __main__.py  _version.py  cli.py  crawler.py  generator.py  page_analyzer.py  section_grouper.py
tests/: test_generator.py  test_page_analyzer.py  test_section_grouper.py
