[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llms-generator"
dynamic = ["version"]
description = "Crawl any website and generate llms.txt — the AI-ready site map standard."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{name = "aouwalitshikkha"}]
keywords = ["llms.txt", "crawler", "seo", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
js = ["playwright>=1.40"]
all = ["llms-generator[js]"]

[project.urls]
Homepage = "https://abdulaouwal.com/"
Repository = "https://github.com/aouwalitshikkha/llms-generator"
Changelog = "https://github.com/aouwalitshikkha/llms-generator/blob/main/CHANGELOG.md"
Documentation = "https://llms-generator.readthedocs.io/"

[project.scripts]
llms-gen = "llms_generator.cli:main"

[tool.setuptools.dynamic]
version = {attr = "llms_generator._version.__version__"}

[tool.setuptools.packages.find]
include = ["llms_generator*"]

[tool.setuptools.package-data]
llms_generator = ["py.typed"]
